syntax = "proto3";
package kdb;

message Metadata {
  // path to store files
  string path = 1;

  // point resolution in nano seconds
  int64 resolution = 2;

  // epoch duration in nano seconds
  int64 duration = 3;

  // payload size in bytes
  uint32 payloadSize = 4;

  // records per segment
  uint32 segmentSize = 5;

  // maximum read-only epochs
  uint32 maxROEpochs = 6;

  // maximum read-write epochs
  uint32 maxRWEpochs = 7;
}
